# MC504-raytracing

./: .gitignore  CMakeLists.txt  README.md  camera.c  camera.h  color.c  color.h  hit_record.h  hittable.h  hittable_list.h  main.c  main.cpp  material.c  material.h  ray.c  ray.h  rtweekend.h  rtwekeend.h  sphere.c  sphere.h  vec3.c  vec3.h
